--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "web",
+  "name": "curriculum",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
