--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "curriculum",
   "private": true,
   "version": "1.0.0",
+  "engines": {
+    "node": "16.14.1"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
