--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "16.14.1"
   },
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
